...
                        Image(systemName: "person.2.fill")
                        Text("Friends")
                    }
                UserView(user: user)
                    .tabItem(){
                        Image(systemName: "person.fill")
                        Text("Profile")
                            .foregroundStyle(Color.primary)
                }
                SettingsView(user: user)
                    .tabItem(){
                        Image(systemName: "gear")
                        Text("Settings")
                    }
            }
        } else {
            NotLoggedMenu()
        }
...
