...
"PromptsForNotLoggedMenu_2" = "Track games";

// settings

"an account" = "an account";

"RemoveAcc" = "Remove account";

"Manage" = "Manage account";

"NoteSignUp" = "By signing up, you agree to our Terms of Service and Privacy Policy.";

"NoteSignIn" = "By signing in, you agree to our Terms of Service and Privacy Policy.";
...
